--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "history": "4.9.0",
     "i18next": "^20.3.1",
     "json-server": "^0.16.3",
+    "moment": "^2.29.1",
+    "primeicons": "^5.0.0",
     "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.10.0",
-    "react-query": "^3.16.0",
+    "react-query": "^3.34.16",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
+    "redux": "^4.1.2",
     "typescript": "^4.1.2",
     "yup": "^0.32.9"
   },
@@ -50,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23"
   }
 }
