--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "^4.0.0-alpha.30",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -14,6 +15,7 @@
     "formik": "^2.2.8",
     "history": "4.9.0",
     "i18next": "^20.3.1",
+    "js-cookie": "^3.0.1",
     "json-server": "^0.16.3",
     "moment": "^2.29.1",
     "primeicons": "^5.0.0",
