--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "typescript": "^4.1.2",
     "yup": "^0.32.9"
   },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "cypress run --config-file cypress.json --browser chrome",
     "eject": "react-scripts eject",
     "seed": "node src/seed.js",
     "server": "json-server --watch db.json --port 3001"
@@ -57,7 +60,13 @@
     ]
   },
   "devDependencies": {
+    "@cypress/browserify-preprocessor": "^3.0.2",
+    "@cypress/react": "^5.12.4",
+    "@cypress/webpack-dev-server": "^1.8.4",
+    "@types/cypress-cucumber-preprocessor": "^4.0.1",
     "autoprefixer": "^10.4.2",
+    "cypress": "^9.5.3",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23"
   }
