--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
-    "faker": "^5.5.3",
     "formik": "^2.2.8",
     "history": "4.9.0",
     "i18next": "^20.3.1",
     "js-cookie": "^3.0.1",
     "json-server": "^0.16.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.1",
@@ -24,22 +22,19 @@
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.2",
     "typescript": "^4.1.2",
+    "web-vitals": "^2.1.4",
     "yup": "^0.32.9"
   },
   "cypress-cucumber-preprocessor": {
     "nonGlobalStepDefinitions": true
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "cypress run --config-file cypress.json --browser chrome",
-    "eject": "react-scripts eject",
-    "seed": "node src/seed.js",
-    "server": "json-server --watch db.json --port 3001"
+    "start": "webpack-dev-server --mode development --hot",
+    "build": "webpack --mode production",
+    "test": "cypress run --config-file cypress.json --browser chrome"
   },
   "eslintConfig": {
     "extends": [
@@ -60,14 +55,37 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "7.17.8",
+    "@babel/node": "7.16.8",
+    "@babel/plugin-proposal-class-properties": "7.16.7",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-typescript": "7.16.7",
     "@cypress/browserify-preprocessor": "^3.0.2",
     "@cypress/react": "^5.12.4",
     "@cypress/webpack-dev-server": "^1.8.4",
     "@types/cypress-cucumber-preprocessor": "^4.0.1",
+    "@types/react": "17.0.41",
+    "@types/react-dom": "17.0.14",
     "autoprefixer": "^10.4.2",
+    "babel-loader": "8.2.3",
+    "css-loader": "6.7.1",
     "cypress": "^9.5.3",
     "cypress-cucumber-preprocessor": "^4.3.1",
-    "postcss": "^8.4.8",
-    "tailwindcss": "^3.0.23"
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "image-webpack-loader": "8.1.0",
+    "path": "0.12.7",
+    "postcss": "8.4.12",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.50.0",
+    "sass-loader": "12.6.0",
+    "style-loader": "3.3.1",
+    "tailwindcss": "^3.0.23",
+    "ts-loader": "9.2.8",
+    "webpack": "5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.7.4"
   }
 }
