--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "sass-loader": "12.6.0",
     "style-loader": "3.3.1",
     "tailwindcss": "^3.0.23",
+    "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "9.2.8",
     "webpack": "5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
