--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^12.0.0",
+    "@types/react-expand-animated": "^1.0.0",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "formik": "^2.2.8",
@@ -18,6 +19,7 @@
     "primereact": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-expand-animated": "^1.0.2",
     "react-i18next": "^11.10.0",
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
